public/assets/css/gamePage.css
.html {
    height: 100vh;
}

body {
    background-image: linear-gradient(rgba(36, 24, 67, 0.5), rgba(30, 0, 128, 0.5)), url(../images/treegamebackground.jpeg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    background-attachment: fixed;
    background-repeat: no-repeat;
    height: 100vh;
    width: 100vw;
    position: relative;
    margin: 0;
    justify-content: center;
}

.pageContainer {
    display: flex;
}

x .gameTitle {
    text-align: center;
    color: black;
}

.displayContainer h1 {
    color: rgb(253, 250, 250)
}

h5 {
    margin-top: 15px;
}

.otherGames {
    margin-top: 50px;
    margin-bottom: 35px;
}

.sidebarLeft {
    float: left;
    width: 20vw;
    text-align: center;
    margin-left: 50px;
    color: white;
}
h6 {
    color: white;
}
.aboutMe {
    margin-top: 40px;
    text-align: center;
    max-height: 525px;
    overflow-y: auto;
    background-image: linear-gradient(rgba(36, 24, 67, 0.5), rgba(17, 1, 72, 0.5));
    border-radius: 40px;
}
.otherGamesContainer {
    margin-top: 250px;
    text-align: center;
    max-height: 300px;
    overflow-y: auto;
    background-image: linear-gradient(rgba(36, 24, 67, 0.5), rgba(17, 1, 72, 0.5));
    border-radius: 40px;
    
}

.otherGamesContainer:hover {
    opacity: 1;
}
.aboutMe p {
    margin: 20px;
}
.sidebarRight {
    float: right;
    width: 20vw;
    text-align: center;
    margin-right: 50px;
    margin-top: 50px;
}


.smallImage {
    max-width: 225px;
    margin-right: 5px;
    margin-right: 5px;
}

.smallImageContainer {
   
    overflow-x: scroll;
    display: flex;
    flex-direction: row;
    max-width: 65vw;
    margin-top: 50px;
}

.featuredImage {
    max-width: 700px;
}

.featuredImageContainer {
    display: flex;
    justify-content: center;
    align-items: center;
}

.displayContainer {
    position: relative;
    display: flex;
    flex-direction: column;
    margin-top: 50px;
    align-items: center;

}

.reviewContainer {
    background-image: linear-gradient();
    text-align: center;
    margin-top: 200px;
}

.reviewBox {
    width: 75vw;
    height: 50px;
}

li {
    list-style: none;
}

.supportPackage {
    background-image: linear-gradient(rgba(110, 70, 210), rgba(35, 19, 87));
    color: white;
    margin-top: 25px;
    border-radius: 20px;
    opacity: 0.5;
    
}

.supportPackage:hover {
    opacity: 1;
}

.supportHeader {
    margin-top: 15px;
    color: white;
}
.supportPackage p {
    margin: 0;
}

a {
    font-size: 50px;
    text-decoration: none;
    color: white;
}

.slide {

    position: absolute;
    margin-top: 350px;

    height: 50px;
    width: 50px;
    color: white;
    background-color: black;
    top: 50%;
    transform: translateY(-50%);
    opacity: 100%;
}

.prev {
    position: absolute;
    left: -50px;
    opacity: 0.3;
    top: 30%;
    transform: translateY(-50%);
}
.prev:hover {
    opacity: 1;
}

.next {
    position: absolute;
    right: -50px;
    opacity: 0.3;
    top: 30%;
    transform: translateY(-50%);
    
}
.next:hover {
    opacity: 1;
}

.descriptionContainer {

    color: white;
    margin-top: 50px;
    height: 300px;
    width: 900px;
    text-align: center;
    overflow-y: scroll;
   border-radius: 10px;
    background-image: linear-gradient(rgb(20, 13, 40), rgba(35, 19, 87));
    opacity: 0.6;
}

.descriptionContainer:hover {
    opacity: 0.9;
}

.bottomContainer {
    background-color: black;
    color: white;
}

.descriptionContainer h2 {
    margin-top: 20px;

}

.descriptionContainer p {
    margin: 20px;

}

